# yast-dns-server

./: .cvsignore  .gitignore  .travis.yml  MAINTAINER  README.md  Rakefile  TODO  VERSION  __README__  configure.in.in  yast2-dns-server.spec.in
.github/workflows/: ci.yml
agents/: .gitignore  Makefile.am  ag_convert_named_conf  ag_dns_zone  cfg_named.scr  dns_named.scr  dns_zone.scr
dns-server/: RPMNAME  yast2-dns-server.spec.in
dns-server/agents/: Makefile.am  ag_dns_zone  ag_named_forwarders  cfg_named.scr  dns_named.scr
dns-server/doc/: Makefile.am  TODO  dns_zone_agent.txt
dns-server/package/: yast2-dns-server.changes
dns-server/src/: DnsData.pm  DnsServer.pm  DnsServerUI.ycp  DnsZones.pm  Makefile.am  cmdline.ycp  dialog-installwizard.ycp  dialog-main.ycp  dialog-masterzone.ycp  dialogs.ycp  dns-server.desktop  dns-server.ycp  helps.ycp  misc.ycp  options.ycp  widgets.ycp  wizards.ycp
dns-server/testsuite/tests/: DnsServerAPI.out  Read.out  Read.ycp  Write.out  YaPIReadGlobalOptions.ycp  YaPIStartStopDnsService.ycp  YaPIWriteGlobalOptions.ycp  YaPIWriteZones.out  YaPIWriteZones.ycp
dns-server/testsuite/tests.ag/: zone  zoneag.err
doc/: .gitignore  Makefile.am  spec.txt
doc/autodocs/: .gitignore  Makefile.am
package/: yast2-dns-server.changes  yast2-dns-server.spec
src/: .gitignore  DNSD.pm  DnsData.pm  DnsFakeTabs.ycp  DnsRoutines.pm  DnsServer.pm  DnsServer.ycp  DnsServerAPI.pm  DnsServerHelperFunctions.ycp  DnsServerPunycode.ycp  DnsServerUI.ycp  DnsTsigKeys.pm  DnsZones.pm  Makefile.am  cmdline.ycp  dialog-installwizard.ycp  dialog-main.ycp  dialog-masterzone.ycp  dialogs.ycp  dns-server.desktop  dns-server.rnc  dns-server.y2cc  dns-server.ycp  dns-server_auto.ycp  helps.ycp  misc.ycp  options.ycp  widgets.ycp  wizards.ycp
src/autoyast-rnc/: dns-server.rnc
src/clients/: dns-server.rb  dns-server_auto.rb  dns-server_auto.ycp
src/desktop/: dns-server.desktop
src/include/dns-server/: cmdline.rb  dialog-installwizard.rb  dialog-installwizard.ycp  dialog-main.rb  dialog-main.ycp  dialog-masterzone.rb  dialog-masterzone.ycp  dialogs.rb  dialogs.ycp  helps.rb  helps.ycp  misc.rb  options.rb  options.ycp  wizards.rb
src/lib/dns-server/: service_widget_helpers.rb
src/lib/dns-server/clients/: dns_server.rb
src/lib/ui/: srv_status_component.rb
src/modules/: DnsData.pm  DnsFakeTabs.rb  DnsFakeTabs.ycp  DnsRoutines.pm  DnsServer.pm  DnsServerHelperFunctions.rb  DnsServerUI.rb  DnsServerUI.ycp  DnsTsigKeys.pm  DnsZones.pm
src/scrconf/: convert_named_conf.scr  dns_named.scr  dns_zone.scr  named_forwarders.scr
src/servers_non_y2/: ag_dns_zone  ag_named_forwarders
t/: README.md  startup.t
test/: Makefile.am  dns_server_cmdline_test.rb  dns_server_test.rb  dns_server_ui_test.rb  etc_named_parsing_test.rb  main_test.rb  masterzone_test.rb  service_widget_helpers_test.rb  srv_status_component_test.rb  test_helper.rb
test/clients/: dns_server_test.rb
test/data/braces-without-space/etc/: named.conf  named.conf.json
test/data/stock/etc/: named.conf  named.conf.json
test/data/whitespace/etc/: named.conf  named.conf.json
testsuite/: .cvsignore  .gitignore  Makefile.am
testsuite/lib/: yast2_ag.exp
testsuite/run/: runtest-ag.sh
testsuite/tests/: DnsServerAPI.out  DnsServerAPI.rb  DnsServerAPI.ycp  DnsServerHelperFunctions.out  DnsServerHelperFunctions.rb  DnsServerHelperFunctions.ycp  DnsServerUI.out  DnsServerUI.rb  DnsServerUI.ycp  Read.out  Read.rb  Read.ycp  Summary.out  Summary.ycp  Write.out  Write.rb  Write.ycp  YaPIReadGlobalOptions.out  YaPIReadGlobalOptions.rb  YaPIReadGlobalOptions.ycp  YaPIReadZones.out  YaPIReadZones.rb  YaPIReadZones.ycp  YaPIStartStopDnsService.out  YaPIStartStopDnsService.rb  YaPIStartStopDnsService.ycp  YaPIWriteGlobalOptions.out  YaPIWriteGlobalOptions.rb  YaPIWriteGlobalOptions.ycp  YaPIWriteZones.out  YaPIWriteZones.rb  YaPIWriteZones.ycp  readwrite.out  readwrite.ycp
testsuite/tests.ag/: zoneag.err  zoneag.out  zoneag.rb  zoneag.ycp
