#
# Makefile.am for devtools/devtools/skeletons/config/agents
#

agent_SCRIPTS =		ag_dns_zone	\
			ag_named_forwarders	\
			ag_convert_named_conf

scrconf_DATA =		dns_zone.scr	\
			dns_named.scr	\
			cfg_named.scr	\
			named_forwarders.scr	\
			convert_named_conf.scr

EXTRA_DIST = $(agent_SCRIPTS) $(scrconf_DATA)
